interaction: pickable tiles which can toggled
- pick plugin is quite resource intensive therefore it can be
  enabled/disabled via 'p'

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 bevy = { path = "../../libs/bevy", version = "0.3.0" }
+bevy_mod_picking = { path = "../../libs/bevy_mod_picking", version= "0.2.0" }
 
 
 # Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
