--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 [dependencies]
 bevy = { path = "../../libs/bevy", version = "0.3.0" }
 bevy_mod_picking = { path = "../../libs/bevy_mod_picking", version= "0.2.0" }
+pathfinding = "2.1.1"
 
 
 # Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
