--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Thorsten Lorenz <thlorenz@gmx.de>"]
 edition = "2018"
 
 [dependencies]
-bevy = { path = "../../libs/bevy", version = "0.4.0" }
+bevy = { version = "0.4.0" }
 pathfinding = "2.1.1"
-crisscross = { path = "../crisscross", version = "0.1.0" }
+crisscross = { git = "https://github.com/thlorenz/crisscross", version = "0.1.0" }
 
 
 # Compile all the *dependencies* in optimized release mode even if `--release` is not passed in
